# epoll-shim

./: .clang-format  CMakeLists.txt  Makefile  README.md  Version.map  epoll-shim-elf.pc.cmakein  epoll-shim-interpose.pc.cmakein  epoll.c  libepoll-shim.pc.cmakein  timerfd.c
.github/workflows/: build.yml
include/: time.h
include/epoll-shim/: runtime.h
include/epoll-shim/detail/: common.h  poll.h  read.h  write.h
include/eventfd/sys/: eventfd.h
include/sys/: epoll.h  eventfd.h  signalfd.h  time.h  timerfd.h
src/: CMakeLists.txt  common.c  compat_itimerspec.h  compat_kqueue1.c  compat_ppoll.c  compat_ppoll.h  compat_sigops.c  epoll-shimd.c  epoll-shimd.h  epoll.c  epoll_shim_config.h.cmake  epoll_shim_ctx.c  epoll_shim_ctx.h  epoll_shim_elf.c  epoll_shim_interpose.c  epollfd_ctx.c  epollfd_ctx.h  eventfd.c  eventfd_ctx.c  eventfd_ctx.h  kqueue_event.c  kqueue_event.h  pollable_desc.h  pollable_node.h  rwlock.c  rwlock.h  signalfd.c  signalfd_ctx.c  signalfd_ctx.h  timerfd.c  timerfd_ctx.c  timerfd_ctx.h  timespec_util.h  wrap.c  wrap.h
test/: CMakeLists.txt  atf-c-leakcheck.h  epoll-include-c89-test.c  epoll-test-atf.c  epoll-test.c  eventfd-ctx-test.c  expire-five.c  fcntl-warning.c  kqueue-state.c  malloc-fail-test.c  many-timers.c  perf-many-fds.c  pipe-test.c  real_close.c  rwlock-test.c  signalfd-test.c  socketpair-test.c  timerfd-mock-test.c  timerfd-root-test.c  timerfd-test.c  tst-epoll.c  tst-eventfd.c  tst-timerfd.c
test/cmake/: ATFRunTest.cmake  ATFTest.cmake  ATFTestAddTests.cmake
test/microatf/: atf-c.h
